Big edit and commentary / cleaning throughout.

--- a/classification/logit/logistic_regression.Rmd
+++ b/classification/logit/logistic_regression.Rmd
@@ -3,6 +3,14 @@ title: "Logistic Regression"
 output: github_document
 ---
 
+# Introduction
+
+Welcome! The purpose of this document is to demonstrate a variety of techniques that play an integral role in the construction of a logistic regression model--from data cleaning and exploration, all the way to the selection of a final model. 
+
+This project began as an extension of my study of the classifcation methods covered in the ISLR. From there, I wanted to find a public dataset that touched a domain that interested me, and that would present an intriguing classification problem. I stumbled onto [this academic paper by Cortez et al.](http://www3.dsi.uminho.pt/pcortez/wine5.pdf) while looking into support vector machines (SVMs), and was instantly intrigued. While their originally paper investigated methods of continous prediction, I sought to reshape the problem as a one of binary classification. More specifically, as someone who generally enjoys wine, I sought to create a model that could classify low-quality wines (so that I know which features are red flags to be avoided when picking out wine).
+
+While the code is extensively commented, with additional explanatory notes along the way, should you have any questions at all, feel free to reach out via the "Issues" tab for this repository. I answer all questions expeditiously. 
+
 ```{r results='hide', warning=FALSE, message=FALSE}
 # first a few general set-up items / housekeeping items
 
@@ -16,6 +24,7 @@ options(scipen = 999)
 library(dplyr) # for piping
 library(ggplot2) # for visualization
 library(ggthemes) # for custom visualization
+library(broom) # needing for tidying model summary output into a df
 ```
 
 # Importing, Exploring, Cleaning, Normalizing / Centering, and Prepping the Data
@@ -28,16 +37,17 @@ library(ggthemes) # for custom visualization
 
 
 ```{r}
-# we have both red and white wine datasets with the same variables 
+# I have both red and white wine datasets with the same variables 
+# only nuance of note below is that the csvs are annoyingly semi-colon delimited, so I specifiy the sep. 
 base_red <- read.csv("data/winequality-red.csv",sep=";")
 base_white <- read.csv("data/winequality-white.csv",sep=";")
 
-# lots of useful information about the dataset
+# lots of useful information about the datasets
 glimpse(base_red) 
 glimpse(base_white) 
-
-# the datasets both have the same variables, but the red dataset has notably fewer observations
 ```
+
+Aftering glimpsing at the data, I can see that the datasets both have the same variables, but the red wine dataset has notably fewer observations. As I'll explain shortly, I don't actually need the red wine dataset; however, I'll show how one would go about cleaning and combining both for educational purposes. 
 
 ```{r}
 # given that the two datasets all have the same variables, we'll add a color variable to each and then combine
@@ -48,7 +58,7 @@ base_red <- base_red %>%
 base_white <- base_white %>%
   mutate(color = "white")
 
-# combining the two data frames
+# combining the two data frames into one master df
 main_wine_df <- bind_rows(base_red, base_white)
 
 # viewing the newly combined data frame
@@ -63,18 +73,20 @@ library(janitor) # for data cleaning and tabular exploration
 # tidying variable names and dropping any useless rows / columns
 
 main_wine_df <- main_wine_df %>%
-  janitor::clean_names() %>% # converts to underscore case and cleans
-  janitor::remove_empty(which = c("rows","cols")) # drops all rows and columns that are entirely empty
+  # converts to underscore case and cleans up column names
+  janitor::clean_names() %>% 
+  # drops all rows and columns that are entirely empty
+  janitor::remove_empty(which = c("rows","cols")) 
 ```
 
-In this preliminary analysis, I will build a model only for white wine. The reason for this is entirely arbitrary--I personally love most red wine, and the only wine I have ever absolutely despised was white. As such, for my own intellectual curriosity I wanted to create a model that predicts the classification of the lowest quality white wine specifically, with an eye towards better understanding the characteristics of the worst white wine in order to avoid them altogether. 
+In this preliminary analysis, I will build a model only for white wine. The reason for this is entirely arbitrary--I personally love most red wine, and the only wine I have ever absolutely despised was white. As such, for my own intellectual curriosity I wanted to create a model that classifies the lowest quality white wine specifically, with an eye towards better understanding the characteristics of the worst white wine in order to avoid them altogether. 
 
 ```{r}
-# for the purpose of simplicity, we are going to start by only looking at the white wine
+# I am going to create a dataset of just the white wine
 white_main_df <- main_wine_df %>%
   # filtering to just the white wine
   filter(color == "white") %>%
-  # dropping the now-useless variable
+  # dropping the now-useless variable for color
   select(-color) %>%
   # ensuring quality is a factor; this will be useful later
   # as a rule of thumb, it's good to factor any non-numeric variables when glm modeling
@@ -88,14 +100,16 @@ glimpse(white_main_df)
 
 ```{r}
 # Even though we dropped any rows / cols that are entirely null, we need to check for NA problems
-library(DataExplorer) # allows for creation of missings values map
+library(DataExplorer) # allows for creation of missing values map
 # documentation for DataExplorer: https://towardsdatascience.com/simple-fast-exploratory-data-analysis-in-r-with-dataexplorer-package-e055348d9619
 DataExplorer::plot_missing(white_main_df) # shows % of NAs within each variable
 ```
 
-Good news at this point is this dataset looks perfectly clean of nulls! If there were any problems with nulls, we would solve it using complete.cases() or something similar.
+Good news at this point is this dataset looks perfectly clean of nulls! If there were any problems with nulls, I would solve it using complete.cases() or something similar.
 
 ### Continous Variables Exploration 
+
+Below I'll demonstrate the DataExplorer function for both histogram and density chart plot creation for all continuous variables; they present similar information but both are shown for the sake of demonstration.
 
 ```{r}
 # high-level univariate variable-exploration
@@ -117,15 +131,15 @@ DataExplorer::plot_density(data = white_main_df, title = "Continuous Variables E
 plot_bar(data = white_main_df, order_bar = FALSE, title = "Categorical Variables Explored")
 ```
 
+Here we can see that the quality of these wines are rougly normally distirbuted, with the most common quality score being 6, and very few scores coming in <= 4 or >= 8.  
+
 ```{r}
 # and then we can use janitor to see the exact cross-tab of our quality variable
+# this function below is, in my opinion, and better version of the base table function
 janitor::tabyl(white_main_df$quality)
-# it looks like wines with a rating < 5 are exceptionally bad, so we'll use that as our benchmark
-# all together wines with a rating below 5 represent just under 4% of the population
 ```
 
 It looks like wines with a rating < 5 are exceptionally bad, so we'll use that as our benchmark. All together wines with a rating below 5 represent under 4% of the population--so we'll be dealing with a low incidence binary outcome left-hand side variable in this particular modeling scenario. 
-
 
 ### Outcome Variable Creation
 
@@ -135,6 +149,8 @@ white_final_df <- white_main_df %>%
   # type conversion here can be tricky because to de-factor requires multiple steps
   # we have to de-factor, perform the logical test on the numeric, and then re-factor
   mutate(low_qual_flag = factor(ifelse(as.numeric(as.character(quality)) < 5,1,0))) %>%
+  # drop quality which is now a useless variable given that we have our binary flag
+  # this will also avoid perfect segmentation errors later on in the modeling process
   select(-quality)
 
 glimpse(white_final_df) # taking another look at the new dataset
@@ -142,9 +158,10 @@ glimpse(white_final_df) # taking another look at the new dataset
 
 ```{r}
 # And now we'll take one final look at the distribution of our outcome variable
-# as can be seen, a low quality white wine is a rare event; ~3.75% of the time
 tabyl(white_final_df$low_qual_flag)
 ```
+
+As can be seen above, a low quality white wine is a rare event, only occuring ~3.75% of the time.
 
 ## Centering and Normalizing the Data 
 
@@ -153,7 +170,7 @@ For more information on when to center / normalize data, see below:
 - tl;dr --> center the data when you want your intercept term to represent your expectation when the model is fed the average for each variable in the model, as opposed to the model expectation when all variables == 0; normalize the data when the variable ranges differ markedly
 
 ```{r}
-# we're going to scale and center all variables (except our left-hand side)
+# I'm going to scale and center all variables (except my left-hand side variable)
 white_final_df[,-12] <- scale(white_final_df[,-12], center = TRUE, scale = TRUE)
 glimpse(white_final_df)
 ```
@@ -167,39 +184,39 @@ For more on all the cool varieties of correlation plots that can be created, see
 # package needed for all varieties of correlation plots
 library(corrplot)
 
-# building a correlation matrix and ensuring that it only takes in components that are numeric 
+# building a correlation matrix and ensuring that it only takes in variables that are numeric 
 # this is necessary because if there are any non-numeric elements in the matrix, this will break 
 corr_matrix <- cor(white_final_df[, sapply(white_final_df, is.numeric)])
 
 # getting the matrix of p-values that correspond to the strength of correlation for each pairing
 res1 <- cor.mtest(white_final_df[, sapply(white_final_df, is.numeric)], conf.level = .95)
 
-# first we'll build a correlation plot that checks for significance level
-# this one will also give us a hint at strength of correlation based on the colors 
+# first I'll build a correlation plot that checks for significance level
+# this one will also give me a hint at strength of correlation based on the colors 
 corrplot(corr_matrix, p.mat = res1$p, method = "color", type = "upper",
          sig.level = c(.001, .01, .05), pch.cex = .9,
          insig = "label_sig", pch.col = "black", order = "AOE", na.label = "NA")
 
-# and finally we'll build a simpler corrplot to get the strenth of correlation numbers visualized
+# and finally I'll build a simpler corrplot to get the strength of correlation numbers visualized
 corrplot(corr_matrix, method = "number", type = "upper", pch.cex = .9,
          order = "AOE", number.cex = .7, na.label = "NA")
 ```
 
 Takeways from these types of exploratory techniques can help us to create a more informed model. We may, depending on the circumstances, treat variables differently in our model-building process as a result of these types of charts. For example, we might discover a great degree of cross-correlation that allows us to delete duplicative variables, etc. We can notice a few interesting trends from our results above in this case:
 
-- Residual sugar and denisty are highly positively correlated, while alcohol and density are highly negatively correlated. These correlations are also significant. While most of these are intuitive, we might do well to remember these cross-correlations when it comes time to do dimensionality reduction with this model (if necessary). All in all, it seems as though there are a few interesting relationships to be explored here, but nothing that appears concerning from the perspective of very high degree of multicolinearity. 
-
+Residual sugar and density are highly positively correlated, while alcohol and density are highly negatively correlated. These correlations are also significant. While most of these are intuitive, we might do well to remember these cross-correlations when it comes time to do dimensionality reduction with this model (if necessary). All in all, it seems as though there are a few interesting relationships to be explored here, but nothing that appears concerning from the perspective of very high degree of multicolinearity. 
 
 ## Prepping Data for the Modeling Process
 
 ```{r}
 # split the data into training and testing sets
-library(caret) # needed to createDataPartitions
+library(caret) # needed for createDataPartition function and other model-building staples
 
-# Partition data: 80 / 20 split : train / test
+# Partition data: 80 / 20 split : train / test (standard)
 # set seed to ensure reproducibility
 set.seed(777)
 
+# create partition to be used to split data into two sets
 in_train <- caret::createDataPartition(y=white_final_df$low_qual_flag, p=0.80, list=FALSE)
 
 # splits the data into training and testing sets
@@ -213,6 +230,8 @@ dim(testing)
 
 # Building a Basic Logit 
 
+Now we'll get to the main attraction--the model-building itself. We'll start with a simple logit that includes all possible variables, and then use a few fancier techniques to look into interactions / polynomial terms, ultimately trimming down to a model that balances predicitve power with interpretability to the extent that suits our needs.
+
 ## Estimating the Model 
 
 ```{r}
@@ -225,12 +244,12 @@ simple_logit_fit <- glm(low_qual_flag ~ .,
 summary(simple_logit_fit)
 ```
 
-## First Look at Model Predictions 
+## First Look at Model Predictions for Simple Logit
 
 ```{r}
 # first we'll examine what sort of predictions the model would make when fed the training set
 # then we'll repeat this with the testing set (which we should care a bit more about)
-# then we'll observe the distribution of modelled probabilities to look for interesting trends
+# then we'll observe the distribution of model-output probabilities to look for interesting trends
 
 # run predictions on training set
 prediction_train <- predict(simple_logit_fit, newdata = training, type = "response" )
@@ -257,13 +276,18 @@ theme_economist()
 
 ## Determining What Classification Cutoff is Appropriate (Simple Logit)
 
+When actually using a logit to make classification predictions, the model does not simply output a 1/0 for each case it is fed; it assigns a probability. As such, we have to determine the threshold (or cutoff) above which probability we will classify a particular case as a 1 vs a 0. In this case more specifically, the cutoff is the model-assigned probabilty above which a particular wine will be classifed as low-quality. 
+
+In the coming sections, we'll look into some more helpful functions and techniques that assist in the selection of this cutoff. The norm one might expect is to use 50% as a cutoff, but this is a blunt methodology that suits few models well. One more intelligent rule-of-thumb is to select the population prevalence of the variable of interest and use that as the cutoff (i.e. if 4% of our wines are low quality, 4% should be the cutoff). This works as an effective rule of thumb, but as we'll see, there are more empirically-sound techniques that take into consideration the goals / priorities specific to the modeling problem at hand. 
+
 ```{r}
-# some custom functions are sourced in, to reduce document's length
+# some custom functions are sourced in, to reduce this document's length
 # the majority of these functions are from ethen8181's GitHub, with edits / improvements I added
 # more info on these custom functions here: http://ethen8181.github.io/machine-learning/unbalanced/unbalanced.html
 
 # sourcing my adopted version of the aforementioned functions directly from my GitHub
 library(RCurl) # Provides functions to allow one to compose general HTTP requests, etc. in R
+
 # grabbing the raw info from my GitHub to turn into a text object
 script <- getURL("https://raw.githubusercontent.com/pmaji/r-stats-and-modeling/master/classification/useful_classification_functions.R", ssl.verifypeer = FALSE)
 # sourcing that code just like you might source an R Script locally
@@ -284,13 +308,16 @@ accuracy_info <- AccuracyCutoffInfo(train = predictions_train_full,
 accuracy_info$plot
 ```
 
+From the chart above we can begin to see where the optimal cutoff may be. That said, the metric we are using above is overall model accuracy. Next, we'll dive into some methods that make more sense when we are targetting a particular type of accuracy. For example, maybe we care more about catching every possible bad white wine, even at the risk of misclassifying a massive number of good wines. With the functions below, these model optimization tradeoffs become easier to control and visualize. They will vary according to the question at hand. 
+
 ```{r}
-# Moving on to using ROC Curves to pinpoint optimal cutoffs
+# Moving on to using receiver operating characteristic (ROC) Curves to pinpoint optimal cutoffs
 
 # user-defined costs for false negative and false positive to pinpoint where total cost is minimized
 cost_fp <- 10 # cost of false positive
 cost_fn <- 100 # cost of false negative
 # here the assumption I've made is that a false positive is 1/10th as costly as a false negative
+# in other words, I prioritize catching the bad wines much more than I care about throwing out good ones
 
 # creates the base data needed to visualize the ROC curves
 roc_info <- ROCInfo(data = predictions_test_full, 
@@ -302,14 +329,13 @@ roc_info <- ROCInfo(data = predictions_test_full,
 
 ### ROC Curve for Simple Logit 
 
-```{r fig2, fig.height = 4, fig.width = 6, fig.align = "center"}
+```{r fig1, fig.height = 4, fig.width = 6, fig.align = "center"}
 # plot the roc / cutoff-selection plots
 # color on the chart is cost -- darker is higher cost / greener is lower cost
 grid.draw(roc_info$plot)
 ```
 
 It looks like, for the Simple Logit, the optimal cutoff is 0.07. 
-
 
 ## Examining Model Performance for the Simple Logit
 
@@ -324,10 +350,9 @@ cm_info <- ConfusionMatrixInfo(data = predictions_test_full,
 cm_info$plot
 ```
 
-```{r}
-# lastly, we'll use the cutoff we have arrived at from the work above to test the model's predictions
-# think of this section as the cross-tab version of the confusion matrix plot shown above
+Lastly, we'll use the cutoff we have arrived at from the work above to test the model's predictions; think of this section as the cross-tab version of the confusion matrix plot shown above.
 
+```{r}
 # getting model probabilities for our testing set
 simple_logit_fit_probs <- predict(simple_logit_fit,
                            newdata = testing,
@@ -342,6 +367,8 @@ simple_logit_conmatrix
 ```
 
 ## Documenting Performance of Simple Logit Model
+
+As we create different models over the course of this project, we'll want to keep track of how they perform, along with other details for comparison. To help with this, we'll store a few key pieces of information for every model we building: its name, chosen classificatoin cutoff, sensitity (the % of true positives the model successfully classifies), specificity (the % of true negatives the model successfully classifies), number of model terms, and total cost. These pieces of information will all be helpful later on when picking which model we want to go with, as we may want to pick the simplest model (i.e. fewest terms), or the the model that is best at classifying true positives, etc. etc. 
 
 ```{r}
 # creating a blank table to record a running set of performance metrics for each model we create
@@ -369,11 +396,9 @@ running_model_synopsis_table <- bind_rows(running_model_synopsis_table, simple_l
 running_model_synopsis_table
 ```
 
-
-
 # Penalized Logistic Regression (Lasso)
 
-- Now using an Objective Function that penalizes low-ROI variables. This is similar to ridge regression except variables with coefficients non-consequential enough will be zero'ed out of the model.
+- Now we'll move on to use a technique that makes use of an Objective Function that penalizes low-ROI variables. This is similar to ridge regression except variables with coefficients non-consequential enough will be zero'ed out of the model.
 - Useful source: http://www.sthda.com/english/articles/36-classification-methods-essentials/149-penalized-logistic-regression-essentials-in-r-ridge-lasso-and-elastic-net/
 
 ## Tuning the Hyperparameter for the Lasso Model w/ 2-Way Interactions and Polynomial Terms
@@ -391,11 +416,10 @@ The reason for these two choices is that upsampling is the simplest method for t
 Finally, it may be worth stating explicitly that my purpose of using the lasso method is to get an idea for what variables might be useful, and what variables might not be useful. As such, it makes sense to throw many variables at the lasso model to take full advantage of its capacity to weed out the noise. For this exercise, I will consider all of the following in each lasso model:
 
 - All single variable terms
-- All nth-degree polynomial terms (where n is bounded by 3 for simplicity's sake)
+- All nth-degree polynomial terms (where n is bounded by 3; it seldom makes sense to go higher)
 - All unique two-direction interaction effects 
 
 After training the models using both aforementioned sampling methodologies, we will hopefully be able to glean some information in the end about what polynomial terms, interaction effects, or single variables appear most statistically powerful and thus worthy of consideration in the final model. 
-
 
 ## Sampling Methodology Explored -- Upsampling
 
@@ -407,7 +431,6 @@ upsample_training <- caret::upSample(training, (training$low_qual_flag))
 
 # one downside of the upSample function is it creates a new left-hand side variable (class)
 # as such, we have to do some minor clenaing
-
 upsample_training <- upsample_training %>%
   select(-low_qual_flag) %>%
   rename(`low_qual_flag` = `Class`)
@@ -419,9 +442,11 @@ janitor::tabyl(upsample_training$low_qual_flag)
 
 ## Building the Model Formula (Upsampled Lasso)
 
+The function outlined below is very helpful for formula creation for reasons that will become more obvious later on when we start trying to craft formulae based on outputs / datasets. GLM formulas are a tricky object type, but doing this kind of things saves us a lot of time and manual work typing out all model terms. 
+
 ```{r}
 # first we get all variables with their corresponding degree polynomial into the model
-# I'm also including here all two:way interaction effects
+# I'm also including here all two-way interaction effects
 # in the code below, the integer in quotes determines the max nth degree polynomial to be tested
 upsample_lasso_formula <- as.formula(
   paste('low_qual_flag ~', paste('poly(', colnames(upsample_training[-12]),',3)', collapse = ' + '), '+ .^2', '- .')
@@ -431,19 +456,20 @@ upsample_lasso_formula <- as.formula(
 upsample_lasso_formula
 ```
 
-
 ### Building the Upsampled Model Matrix
 
 ```{r}
 # Then we build our model matrix (including all two-way interactions possible and polynomials up to 3rd degree)
 x <- model.matrix(upsample_lasso_formula, upsample_training)
-# calling out what the outcome variable should be explicitly for this method
+# calling out what the outcome variable should be explicitly used for this method
+# this method of building an x and a y is simply popular style for working with model.matrix 
 y <- upsample_training$low_qual_flag
 ```
 
 ### Tuning Lambda for Upsampled Logit
 
 ```{r echo=T, results='hide', warning=FALSE}
+# we're turning results off here because sometimes the output gets out of hand 
 library(glmnet) # package needed for ridge methods 
 # Next we move on to find the best lambda using cross-validation
 # Cross-validation is for tuning hyperparameters; not normally needed if model requires no hyperparameters
@@ -453,20 +479,18 @@ set.seed(777) # set seed for reproduciblity
 cv.lasso <- cv.glmnet(x, y, alpha = 1, family = "binomial")
 ```
 
-
 ### Plotting Lambdas for Upsampled Logit
+
+The ultimate goal with this hyperparameter-tuning exercise is to pick a lambda to ultimately be used in our lasso. Two common choices for lambda: lambda min and lambda lse (both are shown with dotted lines below, in turn). It's up to the modeler to decide which to choose in this case; simplicity / error-minimization tradeoff. We'll cover the details of how to make the call on this choice below. 
 
 ```{r}
 # plots the various possible lambdas 
 plot(cv.lasso)
-# Two common choices for lambda: lambda min and lambda lse (both are shown with dotted lines, in turn)
-# Up to the modeler to decide which to choose in this case; simplicity / error-minimization tradeoff
 ```
 
 The two common choices are shown visually with dotted lines, in turn:
 - Lambda Min (the value that minimizes the prediction error)
 - Lambda LSE (gives the simplest model but also lies within one SE of the optimal value of lambda)
-
 
 ### Examining the Resultant Coefficients (Upsampled Lasso)
 
@@ -475,6 +499,9 @@ The number of non-zero'ed out variables that you will get as the result of tunin
 ### First the Coefficients for the Lambda Min Upsampled Lasso
 
 ```{r}
+# setting max-print from here on out because otherwise the model output gets crazy-long
+options(max.print=25) # max print length set to 25
+
 # lambda min is the value that minimizes the prediction error
 # cv.lasso$lambda.min  # uncomment and call this if you wanted the raw lambda 
 
@@ -489,19 +516,20 @@ coef(cv.lasso, cv.lasso$lambda.min)
 # showing coefficients using lambda min (if . then variable has been zero'ed out)
 coef(cv.lasso, cv.lasso$lambda.1se)
 
-# storing the coefficients for later use
+# storing the coefficients for later use as we'll go with lambda lse as we want the simpler option
+# this is based on a judgement call and my desire in this case for simplicity over predictive potential
 upsample_lambda_coefs <- broom::tidy(coef(cv.lasso, cv.lasso$lambda.1se))
 ```
 
 ### Building the Upsampled Lasso Logit Formula Based on Coefficient List
 
 ```{r}
-# first we trim from the coefficient list only the coefficients that weren't 0'ed out
+# first we trim from the coefficient list to only the coefficients that weren't 0'ed out
 upsample_coef_list <- upsample_lambda_coefs %>%
   # arrange the coefficients in descending order of absolute value
   arrange(desc(abs(value))) %>% 
   select(row) %>%
-  # dropping the intercept which isn't needed in formula
+  # dropping the intercept which isn't needed in formula as it's added automatically
   filter(row != '(Intercept)') %>%
   as.data.frame()
 
@@ -521,14 +549,13 @@ result_upsample_lasso_formula
 ### Rebuilding Logit Based on Outcome of Upsample Lasso Selection Methodology
 
 ```{r}
-# rebuilt logit based on info gained from lasso; would like to be able to simply plug in the coef list, from above
+# rebuilt logit based on info gained from lasso; thanks to formula we can simply plug in the coef list from above
 result_upsample_lasso_fit <- glm(result_upsample_lasso_formula,
                  data = training,
                  family = binomial)
 
 summary(result_upsample_lasso_fit)
 ```
-
 
 ### Re-Determining What Classification Cutoff is Appropriate (Upsample Lasso)
 
@@ -554,13 +581,12 @@ roc_info <- ROCInfo(data = predictions_test_full,
 
 ### ROC Curve for Logit Resuliting from Upsample Lasso
 
-```{r fig4, fig.height = 4, fig.width = 6, fig.align = "center"}
+```{r fig2, fig.height = 4, fig.width = 6, fig.align = "center"}
 # plot the new roc / cutoff-selection plots
 grid.draw(roc_info$plot)
 ```
 
-Looks like the optimal cutoff for this particular model is 0.13. 
-
+Looks like the optimal cutoff for this particular model is 0.14. 
 
 ### Examining Model Performance (Upsample Lasso)
 
@@ -571,7 +597,7 @@ result_upsample_lasso_fit_probs <- predict(result_upsample_lasso_fit,
                            type = "response")
 
 # turning these probabilities into classifications using the cutoff determined above 
-result_upsample_logit_fit_predictions <- factor(ifelse(result_upsample_lasso_fit_probs > 0.13, 1, 0),levels=c('0','1'))
+result_upsample_logit_fit_predictions <- factor(ifelse(result_upsample_lasso_fit_probs > 0.14, 1, 0),levels=c('0','1'))
 
 # builiding a confusion matrix 
 result_upsample_conmatrix <- caret::confusionMatrix(result_upsample_logit_fit_predictions,testing$low_qual_flag, positive='1')
@@ -596,12 +622,14 @@ running_model_synopsis_table <- bind_rows(running_model_synopsis_table, upsample
 running_model_synopsis_table
 ```
 
-
 ## Sampling Methodology Explored -- DBSMOTE
+
+Having explored he upsampling method of selective sampling to increase model performance in this particular case of low-incidence binary classification, we'll move on to a more complicated method-the DBSCAN based SMOTE method of sampling known as DBSMOTE. For more information, see the link above given at the introduction of the lasso section.
 
 ### Building the DBSMOTE Dataset
 
 ```{r echo=T, results='hide', warning=FALSE}
+# likewise hiding the output here because of the annoying output of the DBSMOTE function
 library(smotefamily) # main SMOTE variety package
 library(dbscan) #needed for dbsmote type of SMOTE to function
 
@@ -622,12 +650,11 @@ dbsmote_training <- dbsmote_training$data %>%
 janitor::tabyl(dbsmote_training$low_qual_flag) 
 ```
 
-
 ## Building the Model Formula (DBSMOTE Lasso)
 
 ```{r}
 # first we get all variables with their corresponding degree polynomial into the model
-# I'm also including here all two:way interaction effects
+# I'm also including here all two-way interaction effects, as before
 # in the code below, the integer in quotes determines the max nth degree polynomial to be tested
 dbsmote_lasso_formula <- as.formula(
   paste('low_qual_flag ~', paste('poly(', colnames(dbsmote_training[-12]),',3)', collapse = ' + '), '+ .^2', '- .')
@@ -642,7 +669,7 @@ dbsmote_lasso_formula
 ```{r}
 # Then we build our model matrix (including all two-way interactions possible and polynomials up to 3rd degree)
 x <- model.matrix(dbsmote_lasso_formula, dbsmote_training)
-# calling out what the outcome variable should be explicitly for this method
+# calling out what the outcome variable should be explicitly for this method, as shown previously
 y <- dbsmote_training$low_qual_flag
 ```
 
@@ -662,12 +689,9 @@ cv.lasso <- cv.glmnet(x, y, alpha = 1, family = "binomial")
 ```{r}
 # plots the various possible lambdas 
 plot(cv.lasso)
-# Two common choices for lambda: lambda min and lambda lse (both are shown with dotted lines, in turn)
-# Up to the modeler to decide which to choose in this case; simplicity / error-minimization tradeoff
 ```
 
-
-### First the Coefficients for the Lambda Min DBSMOTE Lasso
+### First the Coefficients for the Lambda min DBSMOTE Lasso
 
 ```{r}
 # lambda min is the value that minimizes the prediction error
@@ -677,7 +701,7 @@ plot(cv.lasso)
 coef(cv.lasso, cv.lasso$lambda.min)
 ```
 
-### Second the Coefficients for the Lambda LSE DBSMOTE Lasso
+### Second the Coefficients for the Lambda lse DBSMOTE Lasso
 
 ```{r}
 #cv.lasso$lambda.1se # uncomment and call this if you wanted the raw lambda 
@@ -688,8 +712,9 @@ coef(cv.lasso, cv.lasso$lambda.1se)
 dbsmote_lambda_coefs <- broom::tidy(coef(cv.lasso, cv.lasso$lambda.1se))
 ```
 
-
 ### Building the DBSMOTE Lasso Logit Formula Based on Coefficient List
+
+Again here we're using the set of coefficients using lambda lse given our prioritization of model simplicity.
 
 ```{r}
 # first we trim from the coefficient list only the coefficients that weren't 0'ed out
@@ -716,14 +741,13 @@ result_dbsmote_lasso_formula
 ### Rebuilding Logit Based on Outcome of DBSMOTE Lasso Selection Methodology
 
 ```{r}
-# rebuilt logit based on info gained from lasso; would like to be able to simply plug in the coef list, from above
+# rebuilt logit based on info gained from lasso
 result_dbsmote_lasso_fit <- glm(result_dbsmote_lasso_formula,
                  data = training,
                  family = binomial)
 
 summary(result_dbsmote_lasso_fit)
 ```
-
 
 ### Re-Determining What Classification Cutoff is Appropriate (DBSMOTE Lasso)
 
@@ -749,13 +773,12 @@ roc_info <- ROCInfo(data = predictions_test_full,
 
 ### ROC Curve for Logit Resuliting from DBSMOTE Lasso
 
-```{r fig5, fig.height = 4, fig.width = 6, fig.align = "center"}
+```{r fig3, fig.height = 4, fig.width = 6, fig.align = "center"}
 # plot the new roc / cutoff-selection plots
 grid.draw(roc_info$plot)
 ```
 
 Looks like the optimal cutoff for this particular model is 0.07. 
-
 
 ### Examining Model Performance (DBSMOTE Lasso)
 
@@ -791,10 +814,9 @@ running_model_synopsis_table <- bind_rows(running_model_synopsis_table, dbsmote_
 running_model_synopsis_table
 ```
 
-
 # Final Model Selection (Progress Thus Far)
 
-Having created various models over the course of this analysis, we can take stock of where we are and compare what we have thusfar. From the running_model_synopsis_table, shown above, we see that the DBSMOTE Lasso has the best sensitivity of all models. That said, our end goal should not just be to have a relatively predicitve model, but one that has some practical utility in the real world. As such, we'll look over the DBSMOTE Lasso and try to simplify it bit to end with something that is both easily explainable and practical. 
+Having created various models over the course of this analysis, we can take stock of where we are and compare what we have thusfar. From the running_model_synopsis_table, shown above, we see that the DBSMOTE Lasso has the best sensitivity of all models. That said, our end goal should not just be to have a relatively predicitve model, but one that has some practical utility in the real world. As such, we'll look over the DBSMOTE Lasso and try to simplify it a bit to end with something that is both easily explainable and practical. 
 
 ## Trimming the Best Model Found Thus Far
 
@@ -803,8 +825,6 @@ We want to take the best model we have found thus far and trim its terms down to
 ### Functionalized Model-Trimming Based on P-Values
 
 ```{r}
-library(broom) # needing for tidying model summary output into a df
-
 # turns model summary for dbsmote lasso model into df
 tidy_dbsmote_lasso <- broom::tidy(result_dbsmote_lasso_fit)
 
@@ -841,8 +861,11 @@ summary(result_final_lasso_fit)
 
 ### Manual Model-Trimming for Final Model
 
+From the above, we can see that after trimming a bit based on p-value, we still have a few variables that, given the new structure, come out as not significant. We'll trim these out of the model and, if needed, keep iterating until all variables are statistically significant. 
+
 ```{r}
-trimmed_final_lasso_fit <- glm(low_qual_flag ~ volatile_acidity + poly(free_sulfur_dioxide,3) + alcohol + fixed_acidity,
+trimmed_final_lasso_fit <- glm(low_qual_flag ~ 
+                                 volatile_acidity + poly(free_sulfur_dioxide,3) + alcohol + fixed_acidity,
                  data = training,
                  family = binomial)
 
@@ -872,7 +895,7 @@ roc_info <- ROCInfo(data = predictions_test_full,
 
 ### ROC Curve for Trimmed Final Lasso
 
-```{r fig17, fig.height = 4, fig.width = 6, fig.align = "center"}
+```{r fig4, fig.height = 4, fig.width = 6, fig.align = "center"}
 # plot the roc / cutoff-selection plots
 # color on the chart is cost -- darker is higher cost / greener is lower cost
 grid.draw(roc_info$plot)
@@ -915,7 +938,6 @@ running_model_synopsis_table
 # Conclusions
 
 While this is a continual work-in-progress, much has been accomplished thus far. We started with a basic model using all variables in the dataset, and then, using more advanced methods like DBSMOTE sampling and Lasso regression, arrived at a model with relatively high sensitivity and specificity given our pre-selected cost preferences. Finally, we reduced the dimensionality and complexity of that most predictive model, rendering it more easy to explain and apply in practice. It appears as though, when it comes to classifiying bad white wines--the lower the levels of free sulfur dioxide, the higher the odds are that the wine in question is poor quality. 
-
 
 Yet to come:
 - Variable importance commentary
